# elevation_platform

./: CMakeLists.txt  package.xml
include/elevation_platform/: command_group.hpp  elevation_platform_node.hpp  joint_motor_driver_node.hpp  motor_command.hpp  motor_commands.hpp  motor_init_state.hpp  motor_mode.hpp  motor_status.hpp
launch/: elevation_platform.launch.py
params/: joint_motor_config.yaml
src/: elevation_platform_node.cpp  joint_motor_driver_node.cpp  main.cpp
